--- a/atualizado/index.html
+++ b/atualizado/index.html
@@ -79,17 +79,18 @@
 				</div>
 			</div>
 		</nav>
-		<div class="container">
-			<h2>Carousel Example</h2>  
+
+
+		<div id="carrossel" class="container">
 			<div id="myCarousel" class="carousel slide" data-ride="carousel">
-			  <!-- Indicators -->
+			  <!-- ordem das imagens -->
 			  <ol class="carousel-indicators">
 				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 				<li data-target="#myCarousel" data-slide-to="1"></li>
 				<li data-target="#myCarousel" data-slide-to="2"></li>
 			  </ol>
 		  
-			  <!-- Wrapper for slides -->
+			  <!--slides-->
 			  <div class="carousel-inner">
 				<div class="item active">
 				  <img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/iphone-14-model-unselect-gallery-1-202209?wid=5120&hei=2880&fmt=p-jpg&qlt=80&.v=1660689596976" alt="Los Angeles" style="width:100%;">
@@ -103,18 +104,8 @@
 				  <img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/iphone-14-model-unselect-gallery-2-202209?wid=2560&hei=1440&fmt=p-jpg&qlt=80&.v=1660744859508" alt="New york" style="width:100%;">
 				</div>
 			  </div>
-		  
-			  <!-- Left and right controls -->
-			  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-				<span class="glyphicon glyphicon-chevron-left"></span>
-				<span class="sr-only">Previous</span>
-			  </a>
-			  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-				<span class="glyphicon glyphicon-chevron-right"></span>
-				<span class="sr-only">Next</span>
-			  </a>
 			</div>
-		  </div>
+		</div>
 
 		
 
