--- a/produtos.html
+++ b/produtos.html
@@ -74,8 +74,8 @@
     <div class="container">
       <div id="responsivo-nav">
         <ul class="main-nav nav navbar-nav">
-        	<li><a href="./index.html">HOME</a></li>
-          <li><a href="./produtos.html">TELEFONIA</a></li>
+        	<li ><a href="./index.html">HOME</a></li>
+						<li class="active"><a href="./produtos.html">TELEFONIA</a></li>
 						<li><a href="#">ELETRODOMÉSTICOS</a></li>
 						<li><a href="#">TVS E VÍDEO</a></li>
 						<li><a href="#">ELETROPORTÁTEIS</a></li>
@@ -88,7 +88,7 @@
     </div>
   </nav>
   <div class="container page-header">
-    <h1>Busca por: <strong>Celulares</strong> </h1>
+    <h1>Telefonia </h1>
   </div>
   <div class="container">
     <div class="row">
